Adding driver,pom,sampletable.html files

--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,13 @@
         </configuration>
       </plugin>
     </plugins>
-  </build>
+        
+      </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.seleniumhq.selenium</groupId>
+  		<artifactId>selenium-java</artifactId>
+  		<version>3.141.59</version>
+  	</dependency>
+  </dependencies>
 </project>
